--- a/Round2/Round2_file17.Rmd
+++ b/Round2/Round2_file17.Rmd
@@ -28,13 +28,12 @@ effects <- seq(0, 0.5, length=3)
 # A <- matrix(rnorm(p^2), ncol = p, nrow=p)
 # Sigma0 <- crossprod(A,A)
 # D <- diag(1/sqrt(diag(Sigma0)))
-# Sigma <- D %*% Sigma0 %*% D 
+# Sigma <- D %*% Sigma0 %*% D
 # save(Sigma, file='Sigma.RData')
 
 load(file='Sigma.RData')
 lattice::levelplot(Sigma)
 Sigma.eigen <- eigen(Sigma)
-plot(Sigma.eigen$values, type='h')
 direction0 <- Sigma.eigen$vectors[,which.min(abs(Sigma.eigen$values))] 
 maha <- mahalanobis(x = direction0, center = 0, cov = Sigma)
 direction <- direction0 *sqrt(p/maha)
@@ -60,7 +59,8 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
 
     ## Shift alternative:
     noise <- .noise
-    noise[labels,] <- noise[labels,] + effect * direction
+    shift <- matrix(effect * direction, nrow=20, ncol=23, byrow = TRUE)
+    noise[labels,] <- noise[labels,] + shift
     
     ## Compute observed statistic
     x1 <- noise[labels,]
