--- a/Round2/file31.Rmd
+++ b/Round2/file31.Rmd
@@ -1,17 +1,15 @@
 ---
-title: "Increasing sequence of variances. Signal inversly proportional."
+title: "AR(1) Signal in LOW PCs with fixed Euclidean-norm"
 author: "Jonathan Rosenblatt"
 date: "8/2/2017"
 output: html_document
 ---
 
-
-
 ```{r preliminaries}
-file.name <- "file26"
+file.name <- "file31"
 
 balance <- TRUE   # set for TRUE for balanced folding ana refolding.
-n.replications <-  1e2#1e3
+n.replications <-  1e3
 p <- 23
 n <- 4e1 # total sample size-> n/2 in each group.
 n.permutations <- 3e2
@@ -22,14 +20,15 @@ cost.2 <- 1e-1
 source('Gilron Effect of Cross Validatino.R')
 
 ## Signal in location
-effects <- seq(0, 0.5, length=3) # change in location
+effects <- seq(0, 0.5, length=3) 
 
-## Covariance
-Sigma <- seq_cov(p)
+## Dependence
+Sigma <- ar1_cov(n = p, rho=0.6)
 lattice::levelplot(Sigma)
-direction0 <- 1/diag(Sigma)
-maha <- mahalanobis(x = direction0, center = 0, cov = Sigma)
-direction <- direction0 *sqrt(p/maha)
+Sigma.eigen <- eigen(Sigma)
+plot(Sigma.eigen$values, type='h')
+direction0 <- Sigma.eigen$vectors[,15] 
+direction <- direction0 * sqrt(p)
 ```
 
 
@@ -48,17 +47,19 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     
     ## Gaussian noise
     .noise <- rmvnorm(n=n, sigma = Sigma)
-    
+
     ## Shift alternative:
     noise <- .noise
-    noise[labels,] <- noise[labels,] + effect * direction
-    
+    shift <- matrix(effect * direction, nrow=20, ncol=23, byrow = TRUE)
+    noise[labels,] <- noise[labels,] + shift
+
     ## Compute observed statistic
     x1 <- noise[labels,]
     x2 <- noise[!labels,]
     
     ## Asign observations to folds. Use the simple label structure to balance folds.
     fold.ids <- balanced_folding(labels, n.folds, balance = balance)
+    # capture.output(table(fold.ids, labels), file=balance.log, append = TRUE)
     
     # Observables 
     ts <- list(
@@ -80,11 +81,11 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
       # svm.noCV.3=t_svm(noise, labels, noise, labels, cost=cost.1, type=2),
       # svm.noCV.4=t_svm(noise, labels, noise, labels, cost=cost.2, type=2)
     )
-    
+
     # Prepare to permute
     old.labels <- labels
     old.folds.ids <- fold.ids
-    
+
     # Initialize permuted statistics
     permuted <- matrix(NA, ncol=length(ts), nrow=n.permutations)
     
@@ -95,13 +96,6 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
       fold.ids <- balanced_folding(labels, n.folds, balance) # refold
       x1 <- noise[labels,]
       x2 <- noise[!labels,]
-      
-      # Checking balance:
-      # capture.output(table(.fold.ids, .labels), file=balanc.log, append = TRUE)
-      
-      # for permuting Xs:
-      # .indexes <- sample(seq(n))
-      #  .noise <- noise[.indexes,] 
       
       permuted[i,] <- c(
         Oracle=t_Oracle(x1, x2, Sigma, Sigma),
@@ -129,9 +123,8 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     for(i in seq_along(ts)){
       pvals[i] <- mean(ts[i]<=permuted[,i], na.rm=TRUE)
     }
-    
     names(pvals) <- names(ts)
-    
+
     c(effect=effect, pvals) 
   }
 } 
@@ -143,7 +136,7 @@ save.image(file=paste(file.name,".RData", sep=''))
 
 
 ```{r analyze multiple effects}
-# load("file26.RData")
+# load("file31bis.RData")
 err.bar <- round(3*sqrt(.05*.95/(n.replications)),3) # confidence limits of p-value
 .limits <- 0.05 + c(-err.bar,0,err.bar)
 
